--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1> Pink is my <b>favorite</b> color!
+  <h1> Pink is my <strong>favorite</strong> color!
   </h1>
   <ol>
     <li>pink</li>
