--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 
 <body>
-  <h1> Pink is my <strong>favorite</strong> color!
+  <nav>
+    <a href="index.html">Index.html</a>
+    <a href="page.html">Page.html</a>
+    <a href="page2.html">Page2.html</a>
+  </nav>
+  <h1> You are on the Index Page </h1>
+  <h2> Pink is my <strong>favorite</strong> color!
   </h1>
   <ol>
     <li>pink</li>
