--- a/page.html
+++ b/page.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+  <nav>
+    <a href="index.html">Index.html</a>
+    <a href="page.html">Page.html</a>
+    <a href="page2.html">Page2.html</a>
+  </nav>
+  <h1> You are on the "Page" page </h1>
   <h2> My favorite breakfast item is <i>pancakes</i> sorry not sorry! 
   </h2>
   <ol>
