--- a/page2.html
+++ b/page2.html
@@ -7,8 +7,14 @@
 </head>
 
 <body>
-  <h3 style="background-color:pink;"> My favorite movie is <strong>Moana</strong>, sorry not sorry! 
-  </h3>
+  <nav>
+    <a href="index.html">Index.html</a>
+    <a href="page.html">Page.html</a>
+    <a href="page2.html">Page2.html</a>
+  </nav>
+  <h1> You are on the "Page2" page. </h1>
+  <h2 style="background-color:pink;"> My favorite movie is <strong>Moana</strong>, sorry not sorry! 
+  </h2>
   
   <a href="https://en.wikipedia.org/wiki/Moana_(2016_film)">Moana The Movie</a>
     
