--- a/page2.html
+++ b/page2.html
@@ -16,14 +16,12 @@
   <h2 style="background-color:pink;"> My favorite movie is <strong>Moana</strong>, sorry not sorry! 
   </h2>
   
-  <a href="https://en.wikipedia.org/wiki/Moana_(2016_film)">Moana The Movie</a>
+  <a href="https://en.wikipedia.org/wiki/Moana_(2016_film)">Click this link to learn more about Moana The Movie</a>
     
   <p style="color:red;"> Moana is the main character in the show.
   </p>
-  <img src="https://github.com/KehindeOmo/KehindeOmo-Final/blob/72cc4e1243ae9d968b0927911abf1af80e06bc73/movieposter_en.jpg" alt= "Moana picture">
+  <img src="movieposter_en.jpg" alt= "Moana picture">
   
-  <a href="https://github.com/KehindeOmo/KehindeOmo-Final/blob/5ebfdfb4764c6946d286c23dd01ba63153b8826a/index.html">"Index.html"</a>
-  <a href="https://github.com/KehindeOmo/KehindeOmo-Final/blob/72cc4e1243ae9d968b0927911abf1af80e06bc73/page.html">"Page.html"</a>
+
 </body>
 </html>
-Footer
