--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 <body>
   <nav>
-    <a href="index.html">Index.html</a>
-    <a href="page.html">Page.html</a>
-    <a href="page2.html">Page2.html</a>
+    <a href="index.html">Fav-Color.html</a>
+    <a href="page.html">Breakfast.html</a>
+    <a href="page2.html">Movie.html</a>
+    <a href="page3.html">Dogs.html</a>
   </nav>
   <h1> You are on the Index Page </h1>
   <h2> Pink is my <strong>favorite</strong> color!
@@ -19,6 +20,9 @@
     <li>pink</li>
     <li>white</li>
     <li>black</li>
+    <li>gold</li>
+    <li>cyan</li>
+    <li>olive green</li>
   </ol>
     
   <p> These are a list of my favorite colors from most favorite to least favorite.
