--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link ref="stylesheet"  href="myfinal.css"
+<link rel="stylesheet"  href="myfinal.css"
 <title> Welcome to my Final Project! </title>
 </head>
 
