--- a/page2.html
+++ b/page2.html
@@ -8,9 +8,10 @@
 
 <body>
   <nav>
-    <a href="index.html">Index.html</a>
-    <a href="page.html">Page.html</a>
-    <a href="page2.html">Page2.html</a>
+    <a href="index.html">Fav-Color.html</a>
+    <a href="page.html">Breakfast.html</a>
+    <a href="page2.html">Movie.html</a>
+    <a href="page3.html">Dogs.html</a>
   </nav>
   <h1> You are on the "Page2" page. </h1>
   <h2 style="background-color:pink;"> My favorite movie is <strong>Moana</strong>, sorry not sorry! 
