--- a/page.html
+++ b/page.html
@@ -14,7 +14,7 @@
     <a href="page3.html">Dogs.html</a>
   </nav>
   <h1> You are on the "Breakfast" page </h1>
-  <h2> My favorite breakfast item is <i>pancakes</i> sorry not sorry! 
+  <h2> My favorite breakfast item is <i>pancakes</i>.
   </h2>
   <ol>
     <li>pancakes</li>
