--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link ref="stylesheet"  href="myfinal.css" />
+  <link rel="stylesheet"  href="myfinal.css" />
 <meta charset="UTF-8">
 <title> Welcome to my Final Project! </title>
 </head>
