--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="page3.html">Dogs.html</a>
   </nav>
   <h1> You are on the Index Page </h1>
-  <h2> Pink is my <strong>favorite</strong> color!
+  <h2> Pink is my favorite color!
   </h2>
   <ol>
     <li>pink</li>
