--- a/page2.html
+++ b/page2.html
@@ -13,8 +13,8 @@
     <a href="page2.html">Movie.html</a>
     <a href="page3.html">Dogs.html</a>
   </nav>
-  <h1> You are on the "Page2" page. </h1>
-  <h2 style="background-color:pink;"> My favorite movie is <strong>Moana</strong>, sorry not sorry! 
+  <h1> You are on the "Movie" page. </h1>
+  <h2 style="background-color:black;"> My favorite movie is <strong>Moana</strong>, sorry not sorry! 
   </h2>
   
   <a href="https://en.wikipedia.org/wiki/Moana_(2016_film)">Click this link to learn more about Moana The Movie</a>
