--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     
   <p> These are a list of my favorite colors from most favorite to least favorite.
   </p>
+  
+ <img src="https://i.pinimg.com/564x/a6/1a/ee/a61aee7f1350c6824bd3886c23ec8338.jpg" alt="Pink Definition" width= "300" height="300"> 
 </body>
 </html>
 
