--- a/page2.html
+++ b/page2.html
@@ -12,6 +12,7 @@
     <a href="page.html">Breakfast.html</a>
     <a href="page2.html">Movie.html</a>
     <a href="page3.html">Dogs.html</a>
+    <a href="page4.html">Christmas.html</a>
   </nav>
   <h1> You are on the "Movie" page. </h1>
   <h2 style="background-color:black;"> My favorite movie is <strong>Moana</strong>, sorry not sorry! 
