--- a/page3.html
+++ b/page3.html
@@ -12,6 +12,7 @@
     <a href="page.html">Breakfast.html</a>
     <a href="page2.html">Movie.html</a>
     <a href="page3.html">Dogs.html</a>
+    <a href="page4.html">Christmas.html</a>
   </nav>
   <h1> You are on the "Dogs" page. </h1>
   
