--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
 <body>
   <nav>
-    <a href="index.html">Fav-Color.html</a>
+   <a href="index.html">Fav-Color.html</a>
     <a href="page.html">Breakfast.html</a>
     <a href="page2.html">Movie.html</a>
     <a href="page3.html">Dogs.html</a>
+    <a href="page4.html">Christmas.html</a>
   </nav>
   <h1> You are on the Index Page </h1>
   <h2> Pink is my favorite color!
