--- a/webdevelopment/Index.html
+++ b/webdevelopment/Index.html
@@ -22,8 +22,20 @@ Tested: Feb 10
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
                <title>Home page</title>
                <link rel="stylesheet" href="style.css">
+               <link rel="stylesheet" href="nav.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="Index.html" target="_blank"><img class ="klogo" src="kehindesLogo-cropped.svg" alt="HomeLOGO"/>Kehinde Omoloja</a>
+            <div class="newNav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href ="about.html">About</a></li>
+            <li><a href="#learn.html">Learn</a></li>
+            <li><a href="#extra.html">ExtraPage</a></li>
+            </div>
+        </ul>
+    </nav>
 <header>
     <h1> Kehinde Omoloja</h1>
 </header>
