--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -21,13 +21,15 @@ Tested: Feb 10
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
                <title>About Page</title>
-               <link rel="stylesheet" href="">
+               <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
     <h1> Kehinde Omoloja</h1>
 </header>
 <main>
+
+   <a href="Kehinde%20Omolojas%20New%20Resume.pdf" id ="resume">Kehinde's Resume</a>
         <h3>Here is a little <b>about me</b>......</h3>
         <p>
             Hello welcome to my <em>corner of the web</em>! My name is Kehinde Omoloja and
@@ -42,7 +44,7 @@ Tested: Feb 10
             embracing every aspect of who I am and I definitely won’t stop now or ever.<br>
 Xoxo Kehinde 
     </p>
-    <blockquote> I quote I like to live by is "Be yourself, always." - Kehinde Omoloja </blockquote>
+    <blockquote> A quote I like to live by is "Be yourself, always." - Kehinde Omoloja </blockquote>
 
 </main>
 <footer>
