--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -4,15 +4,15 @@
 
 <!--
 
-Title: About Page
+Title: Demo Page
 
-Use: The page where people learn about me
+Use: The beginning of all regular sites
 
 Author: Kehinde Omoloja
 
 School/Term: Univeristy of Missouri / SP24
 
-Developed:Jan 31
+Developed:Feb 7
 
 Tested: Feb 10
 
@@ -20,7 +20,7 @@ Tested: Feb 10
                <meta charset="utf-8">
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-               <title>About Page</title>
+               <title>Page Title</title>
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
                <link rel="icon" href="newEmoji.png">
@@ -50,23 +50,9 @@ Tested: Feb 10
     <h1> Kehinde Omoloja</h1>
 </header>
 <main>
-
-   <a href="Kehinde%20Omolojas%20New%20Resume.pdf" id ="resume">Kehinde's Resume</a>
-        <h3>Here is a little <b>about me</b>......</h3>
-        <p>
-            Hello welcome to my <em>corner of the web</em>! My name is Kehinde Omoloja and
-            I have always been fascinated about technology. I am a driven university
-            student who is unraveling the exciting parts about the Information Technology
-            field here at the University of Missouri. After my estimated graduation date
-            in May 2026, I aspire to continue my technology journey by exploring more 
-            about the realm of software engineering. On a more personal level, I also have
-            the privilege of being apart of a Nigerian household while also sharing the 
-            joys of having a twin sister. Outside of school, I am total gamer girl with 
-            a girly side who <em> fashion </em> and the color pink. I personally believe in 
-            embracing every aspect of who I am and I definitely won’t stop now or ever.<br>
-Xoxo Kehinde 
+    
+    <p>
     </p>
-    <blockquote> A quote I like to live by is "Be yourself, always." - Kehinde Omoloja </blockquote>
 
 </main>
 <footer>
@@ -76,4 +62,3 @@ Xoxo Kehinde
 </footer>
 </body>
 </html>
-
