--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -14,7 +14,7 @@ School/Term: Univeristy of Missouri / SP24
 
 Developed:Jan 31
 
-Tested: Feb 10
+Tested: Mar 9
 
 -->
                <meta charset="utf-8">
@@ -43,7 +43,8 @@ Tested: Feb 10
                     <li><a href="#Link1">Link3</a></li>
                 </ul>
             </li>
-            <li><a href="#extra.html">ExtraPage</a></li>
+            <li><a href="reflection.html">Reflection</a></li>
+            <li><a href="#contact.html">Contact</a></li>
         </ul>
     </nav>
 <header>
