--- a/webdevelopment/Index.html
+++ b/webdevelopment/Index.html
@@ -43,7 +43,8 @@ Tested: Feb 10
                     <li><a href="#Link1">Link3</a></li>
                 </ul>
             </li>
-            <li><a href="#extra.html">ExtraPage</a></li>
+            <li><a href="reflection.html">Reflection</a></li>
+            <li><a href="#contact.html">Contact</a></li>
         </ul>
     </nav>
 <div class ="bodyStuff">
