--- a/webdevelopment/Index.html
+++ b/webdevelopment/Index.html
@@ -30,10 +30,10 @@ Tested: Feb 10
     <div class="pinkL"></div>
     <nav>
         <div class="klogo">
-            <a href="index.html" target="_blank"><img src="kehindesLogo-cropped.svg" alt="HomeLOGO"/>Kehinde Omoloja</a>
+            <a href="Index.html" target="_blank"><img src="kehindesLogo-cropped.svg" alt="HomeLOGO"/>Kehinde Omoloja</a>
         </div>
         <ul class="navName">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="nM">
                 <a href="learn.html">Learn</a>
