--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -12,9 +12,9 @@ Author: Kehinde Omoloja
 
 School/Term: Univeristy of Missouri / SP24
 
-Developed:Feb 7
+Developed: Feb 28
 
-Tested: Feb 10
+Tested: Mar 9
 
 -->
                <meta charset="utf-8">
@@ -30,10 +30,10 @@ Tested: Feb 10
     <div class="pinkL"></div>
     <nav>
         <div class="klogo">
-            <a href="index.html" target="_blank"><img src="kehindesLogo-cropped.svg" alt="HomeLOGO"/>Kehinde Omoloja</a>
+            <a href="Index.html" target="_blank"><img src="kehindesLogo-cropped.svg" alt="HomeLOGO"/>Kehinde Omoloja</a>
         </div>
         <ul class="navName">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="nM">
                 <a href="learn.html">Learn</a>
@@ -43,7 +43,8 @@ Tested: Feb 10
                     <li><a href="#Link1">Link3</a></li>
                 </ul>
             </li>
-            <li><a href="#extra.html">ExtraPage</a></li>
+            <li><a href="reflection.html">Reflection</a></li>
+            <li><a href="#contact.html">Contact</a></li>
         </ul>
     </nav>
 <header>
