--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -52,8 +52,13 @@ Tested: Mar 9
 </header>
 <main>
 
-   <a href="Kehinde%20Omolojas%20New%20Resume.pdf" id ="resume">Kehinde's Resume</a>
-        <h3>Here is a little <b>about me</b>......</h3>
+    
+  
+        
+        <div id="aboutSec">
+        <img id="examplePics" src="kehindeExample.JPEG" alt="examplePic"/>
+        <div id="textAbout">
+            <h3>Here is a little <b>about me</b>......</h3>
         <p>
             Hello welcome to my <em>corner of the web</em>! My name is Kehinde Omoloja and
             I have always been fascinated about technology. I am a driven university
@@ -68,6 +73,12 @@ Tested: Mar 9
 Xoxo Kehinde 
     </p>
     <blockquote> A quote I like to live by is "Be yourself, always." - Kehinde Omoloja </blockquote>
+    <br>
+    <div id="resumeYes">
+    <a href="Kehinde%20Omolojas%20New%20Resume.pdf" id ="resume">Kehinde's Resume</a>
+</div>
+</div>
+</div>
 
 </main>
 <footer>
