--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -32,6 +32,7 @@ Tested: Feb 10
         <div class="klogo">
             <a href="index.html" target="_blank"><img src="kehindesLogo-cropped.svg" alt="HomeLOGO"/>Kehinde Omoloja</a>
         </div>
+        <button class="mobileNav">&#9776;</button>
         <ul class="navName">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -66,9 +67,12 @@ Tested: Feb 10
         current involvements. I hope this portfolio gives you a small glimpse
         into the evolving chapters of both myself and my professional journey. Happy exploring !
     </p>
+
     <div class="miniClicks">
     <div class="linkedIn">
-        <img src="LinkedIn_icon.svg.png" alt="LinkedIn"/>
+        <a href="https://www.linkedin.com/in/kehinde-omoloja-1/" class="newLink">
+        <img src="LinkedIn_icon.svg.png" alt="LinkedIns"/>
+    </a>
     </div>
     
     <button type="button" class="toggleMode">Toggle Mode<br>(click here)</button>
