--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -14,6 +14,11 @@ School/Term: Univeristy of Missouri / SP24
 
 Developed:Jan 31
 
+
+
+
+
+
 Tested: Mar 9
 
 -->
@@ -32,7 +37,8 @@ Tested: Mar 9
         <div class="klogo">
             <a href="index.html" target="_blank"><img src="kehindesLogo-cropped.svg" alt="HomeLOGO"/>Kehinde Omoloja</a>
         </div>
-        <ul class="navName">
+        <button class="mobileNav" onclick="newNav()">&#9776;</button>
+        <ul class="navName" id="navMenus">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="nM">
@@ -86,6 +92,7 @@ Xoxo Kehinde
     <a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
 </p>
 </footer>
+<script src="newScript.js"></script>
 </body>
 </html>
 
