--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -32,8 +32,8 @@ Tested: Feb 10
         <div class="klogo">
             <a href="index.html" target="_blank"><img src="kehindesLogo-cropped.svg" alt="HomeLOGO"/>Kehinde Omoloja</a>
         </div>
-        <button class="mobileNav">&#9776;</button>
-        <ul class="navName">
+        <button class="mobileNav" onclick="newNav()">&#9776;</button>
+        <ul class="navName" id="navMenus">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="nM">
