--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -32,7 +32,8 @@ Tested: Mar 9
         <div class="klogo">
             <a href="index.html" target="_blank"><img src="kehindesLogo-cropped.svg" alt="HomeLOGO"/>Kehinde Omoloja</a>
         </div>
-        <ul class="navName">
+        <button class="mobileNav" onclick="newNav()">&#9776;</button>
+        <ul class="navName" id="navMenus">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="nM">
@@ -61,5 +62,6 @@ Tested: Mar 9
     <a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
 </p>
 </footer>
+<script src="newScript.js"></script>
 </body>
 </html>
