--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -29,6 +29,9 @@ Tested: Mar 9
                <link rel="stylesheet" href="style.css">
                <link rel="stylesheet" href="nav.css">
                <link rel="icon" href="newEmoji.png">
+               <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -66,7 +69,7 @@ Tested: Mar 9
         <div id="textAbout">
             <h3>Here is a little <b>about me</b>......</h3>
         <p>
-            Hello welcome to my <em>corner of the web</em>! My name is Kehinde Omoloja and
+            Hello welcome to my <em>corner of the web</em>! My name is <span class="customName">Kehinde Omoloja</span> and
             I have always been fascinated about technology. I am a driven university
             student who is unraveling the exciting parts about the Information Technology
             field here at the University of Missouri. After my estimated graduation date
@@ -87,10 +90,17 @@ Xoxo Kehinde
 </div>
 
 </main>
-<footer>
-    <p> Author: Kehinde Omoloja
-    <a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
-</p>
+<footer><div class="miniFooter">
+    <img width="32" height="32" src="https://img.icons8.com/small/32/new-post.png" alt="new-post"/><a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
+    <img width="32" height="32" src="https://img.icons8.com/small/32/phone.png" alt="phone"/><p> 314-413-3144</p>
+    <img width="32" height="32" src="https://img.icons8.com/small/32/linkedin.png" alt="linkedin"/><a href="https://www.linkedin.com/in/kehinde-omoloja-61127621b/">LinkedIn</a>
+    </div>
+<p> Author: Kehinde Omoloja</p>
+<div id="iconInfo">
+<a  href="https://icons8.com/icon/50855/email">Email</a> icon by <a href="https://icons8.com">Icons8</a> /
+<a  href="https://icons8.com/icon/43846/phone">Phone</a> icon by <a href="https://icons8.com">Icons8</a> /
+<a  href="https://icons8.com/icon/44914/linkedin-logo">linkedin logo</a> icon by <a href="https://icons8.com">Icons8</a>
+</div>
 </footer>
 <script src="newScript.js"></script>
 </body>
