--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -50,7 +50,8 @@ Tested: Feb 10
     </nav>
 <div class ="bodyStuff">
     <div class="kEmoji">
-        <img id="ofcourse" src="kehindeEmoji.png" alt="Emoji" onclick="changeAvatar()"/>
+        <img id="ofcourse" src="kehindeEmoji.png" alt="Emoji"/>
+        <div class="OkieDokie">Click me to change &#128516</div>
     </div>
 <header>
     
@@ -70,21 +71,29 @@ Tested: Feb 10
 
     <div class="miniClicks">
     <div class="linkedIn">
-        <a href="https://www.linkedin.com/in/kehinde-omoloja-1/" class="newLink">
+        <a href="https://www.linkedin.com/in/kehinde-omoloja-61127621b/" class="newLink">
         <img src="LinkedIn_icon.svg.png" alt="LinkedIns"/>
     </a>
     </div>
     
-    <button type="button" class="toggleMode">Toggle Mode<br>(click here)</button>
+    <button class="toggleMode" onclick="darkMode()">Toggle Mode<br>(click here)</button>
 </div>
 
 
 </main>
 </div>
 <footer>
-    <p> Author: Kehinde Omoloja
-    <a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
-</p>
+    <div class="miniFooter">
+        <img width="32" height="32" src="https://img.icons8.com/small/32/new-post.png" alt="new-post"/><a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
+        <img width="32" height="32" src="https://img.icons8.com/small/32/phone.png" alt="phone"/><p> 314-413-3144</p>
+        <img width="32" height="32" src="https://img.icons8.com/small/32/linkedin.png" alt="linkedin"/><a href="https://www.linkedin.com/in/kehinde-omoloja-61127621b/">LinkedIn</a>
+        </div>
+<p> Author: Kehinde Omoloja</p>
+<div id="iconInfo">
+<a  href="https://icons8.com/icon/50855/email">Email</a> icon by <a href="https://icons8.com">Icons8</a> /
+<a  href="https://icons8.com/icon/43846/phone">Phone</a> icon by <a href="https://icons8.com">Icons8</a> /
+<a  href="https://icons8.com/icon/44914/linkedin-logo">linkedin logo</a> icon by <a href="https://icons8.com">Icons8</a>
+</div>
 </footer>
 <script src="newScript.js"></script>
 
