--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -45,7 +45,7 @@ Tested: Mar 9
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
-            <li><a href="#contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 <header>
@@ -80,7 +80,7 @@ Tested: Mar 9
   pick the brains of industry experts and acquire valuable insight that will 
   help shape my career path and direct my future.
 With every day that goes by, I realize how closer I am to realizing my genuine 
-passion and what path I want to pursue
+passion and what path I want to pursue.
 
         </p>
 
