--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -53,7 +53,7 @@ Tested: Mar 9
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
-            <li><a href="#contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 <header>
