--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -45,7 +45,7 @@ Tested: Mar 9
                 </ul>
             </li>
             <li><a href="reflection.html">Reflection</a></li>
-            <li><a href="#contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 <header>
