--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -66,7 +66,37 @@ Tested: Feb 10
         <input type="text" id="fname" name="fname" rows="4" value=""required><br>
         <input type="submit" value="Submit">
     </form>
+    <span class="yesTable"></span>
 
+      <figure>
+        <caption> before you leave the site! </caption>
+        <table>
+            <thead>
+                <tr>
+                    <th>&#11088</th>
+                    <th>A little more about me !</th>
+                    <th>&#11088</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Favorite</td>
+                    <td>Season</td>
+                    <td>Summer</td>
+                </tr>
+                <tr>
+                    <td>Favorite</td>
+                    <td>Sport</td>
+                    <td>Volleyball</td>
+                </tr>
+                <tr>
+                    <td>Favorite</td>
+                    <td>Game</td>
+                    <td>Roblox</td>
+                </tr>
+            </tbody>
+        </table>
+    </figure>
 </main>
 <footer>
     <div class="miniFooter">
