--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -49,18 +49,65 @@ Tested: Mar 9
         </ul>
     </nav>
 <header>
-    <h1> Kehinde Omoloja</h1>
 </header>
-<main>
-    
-    <p>
-    </p>
-
+<main class="learnBody">
+    <div class="allOrgs">
+        <div class="org1">
+            <a href=""><img class="orgImages" src="mizzouK.png" alt="Mizzou"></a>
+            <span>
+            <p class="miniHeader">Residential Advisor (RA)</p>
+            <p>Residential Life - University of Missouri (Columbia)<br>August 2023- Present<br>
+                ● Conducted inspections that support the maintenance of the policies and procedures in place for Residential Life<br>
+                ● Created and organized events while upholding a safe and inclusive environment for residents<br>
+                ● Promoted a positive attitude and space by resolving issues and any problems that may arise</p>
+            </span>
+            <div class="miniReflection">
+            <p>Reflection</p>
+            <p>I really enjoyed my time being an RA here, so much that I am doing it again next year. All the families and students that you get to meet along the way makes the experience worth while. Not to mention, all the new friendships you make, if not with your residents then with your fellow RA's. </p>
+            </div>
+        </div>
+        <div class="org2">
+            <a href=""><img class="orgImages" src="mizzouK.png" alt="Mizzou"></a>
+            <span>
+            <p class="miniHeader">College of Engineering Ambassador</p>
+            <p>University of Missouri (Columbia) <br> August 2023- Present<br>
+                ● Gave college-wide tours for incoming and prospective students and their families<br>
+                ● Represented the College of Engineering at campus events and functions<br>
+                ● Engaged in comprehensive conversations that invited inquires from students and parents related to academic programs
+                </p>
+            </span>
+            <div class="miniReflection">
+                <p>Reflection</p>
+                <p>My time as an ambassador was wonderful. At first, I was very scared like any other normal person to conduct a tour, however that fear quickly vanished. I love meeting new people so that part wasn't troublesome for me at all. All in all I enjoy being an ambassador for the College of Engineering.</p>
+            </div>
+        </div>
+        <div class="org3">
+            <a href=""><img class="orgImages" src="nsbeK.png" alt="NSBE"></a>
+        <span>
+            <p class="miniHeader">NSBE - Membership Chair</p>
+            <p>May 2024 - Present <br> 
+                ● Produced flyers for bi-weekly events, concurrently managing social media platforms and organizing events and meetings on a semester basis<br>
+                ● Promoted the number of culturally responsible Black Engineers who exceed academically, succeed professionally, and positively impact the community</p>
+            </span>
+            <div class="miniReflection">
+                <p>Reflection</p>
+                <p>This is my most recent role, however I have been apart of NSBE since freshman year. My first year, I was the Junior Exec Public Relations Chair. Now I am currently apart of the real board as the Membership chair. </p>
+            </div>
+            </div>
+    </div>
 </main>
 <footer>
-    <p> Author: Kehinde Omoloja
-    <a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
-</p>
+    <div class="miniFooter">
+        <img width="32" height="32" src="https://img.icons8.com/small/32/new-post.png" alt="new-post"/><a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
+        <img width="32" height="32" src="https://img.icons8.com/small/32/phone.png" alt="phone"/><p> 314-413-3144</p>
+        <img width="32" height="32" src="https://img.icons8.com/small/32/linkedin.png" alt="linkedin"/><a href="https://www.linkedin.com/in/kehinde-omoloja-61127621b/">LinkedIn</a>
+        </div>
+<p> Author: Kehinde Omoloja</p>
+<div id="iconInfo">
+<a  href="https://icons8.com/icon/50855/email">Email</a> icon by <a href="https://icons8.com">Icons8</a> /
+<a  href="https://icons8.com/icon/43846/phone">Phone</a> icon by <a href="https://icons8.com">Icons8</a> /
+<a  href="https://icons8.com/icon/44914/linkedin-logo">linkedin logo</a> icon by <a href="https://icons8.com">Icons8</a>
+</div>
 </footer>
 <script src="newScript.js"></script>
 </body>
