--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -99,9 +99,17 @@ in this field, which is exactly what I need. :D
 
 </main>
 <footer>
-    <p> Author: Kehinde Omoloja
-    <a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
-</p>
+    <div class="miniFooter">
+        <img width="32" height="32" src="https://img.icons8.com/small/32/new-post.png" alt="new-post"/><a href="kogdd@umsystem.edu">kogdd@umsystem.edu</a>
+        <img width="32" height="32" src="https://img.icons8.com/small/32/phone.png" alt="phone"/><p> 314-413-3144</p>
+        <img width="32" height="32" src="https://img.icons8.com/small/32/linkedin.png" alt="linkedin"/><a href="https://www.linkedin.com/in/kehinde-omoloja-61127621b/">LinkedIn</a>
+        </div>
+<p> Author: Kehinde Omoloja</p>
+<div id="iconInfo">
+<a  href="https://icons8.com/icon/50855/email">Email</a> icon by <a href="https://icons8.com">Icons8</a> /
+<a  href="https://icons8.com/icon/43846/phone">Phone</a> icon by <a href="https://icons8.com">Icons8</a> /
+<a  href="https://icons8.com/icon/44914/linkedin-logo">linkedin logo</a> icon by <a href="https://icons8.com">Icons8</a>
+</div>
 </footer>
 <script src="newScript.js"></script>
 </body>
