--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -57,7 +57,7 @@ Tested: Feb 10
         <label for ="fname"> First Name: </label><br>
         <input type="text" id="fname" name="fname" value=""required><br>
         <label for ="lname"> Last Name: </label><br>
-        <input type="text" id="lname" name="lname" value=""required>
+        <input type="text" id="lname" name="lname" value=""required><br>
         <label for ="fname"> Email: </label><br>
         <input type="text" id="fname" name="fname" value=""required><br>
         <label for ="fname"> Phone: </label><br>
