--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -65,7 +65,7 @@ Tested: Mar 9
   
         
         <div id="aboutSec">
-        <img id="examplePics" src="kehindeExample.JPEG" alt="examplePic"/>
+        <img id="examplePics" src="KehindesHeadshot.JPEG" alt="examplePic"/>
         <div id="textAbout">
             <h3>Here is a little <b>about me</b>......</h3>
         <p>
