--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -49,10 +49,10 @@ Tested: Feb 10
         </ul>
     </nav>
 <header>
-    <h1> Kehinde Omoloja</h1>
+
 </header>
 <main>
-    
+    <div id="nextTo">
     <form>
         <label for ="fname"> First Name: </label><br>
         <input type="text" id="fname" name="fname" value=""required><br>
@@ -67,8 +67,8 @@ Tested: Feb 10
         <input type="submit" value="Submit">
     </form>
     <span class="yesTable"></span>
-
-      <figure>
+    <!-- 
+      <figure style="margin-left: 20px;">
         <caption> before you leave the site! </caption>
         <table>
             <thead>
@@ -96,7 +96,8 @@ Tested: Feb 10
                 </tr>
             </tbody>
         </table>
-    </figure>
+    </figure>-->
+</div>
 </main>
 <footer>
     <div class="miniFooter">
